--- a/_ConferencesSource/2016-10-14-A3PS.Rmd
+++ b/_ConferencesSource/2016-10-14-A3PS.Rmd
@@ -13,10 +13,10 @@ Young Scientist Session
 -------------
 
 ### Modeling of mycoplasma tuberculosis biomarkders for cure
-- speaker: Yookwhan Noh
+- Speaker: Yookwhan Noh
 
 #### Introduction
-- mycobateria taxonomy
+- Mycobateria taxonomy
     - Myco. Tuberculosis
     - MOTT
 - VPC results impreved by several steps
@@ -38,13 +38,13 @@ Young Scientist Session
 - Lancet 2008 - limitation : speed of onset
 - MBMA - useful (Model based meta analysis)
 - Pubmed, cochrane library
-- hot flash, 
+- Hot flash, 
 - Emax model
 15,5,4,~ (39 studies)
     - The effects
-- soy isoflavones
+- Soy isoflavones
 - Placebo
-- run-in design is better.
+- Run-in design is better.
 
 ### Dosing optimization in obesity using pharmacometrics approach: population PK and PD of meropenem in non-obese, obese and mobidly obese patients
 - Eun Kyung Chung (PAGK)
@@ -53,7 +53,7 @@ Young Scientist Session
 - Covariate model building
 - Model selection criteria : goodness of fit plots, RSE, OFV
 - Structural CMT PK model
-- observed conc - individual predicted concentration
+- Observed conc - individual predicted concentration
 - Visual predictive checks - quite good
 - MIC - probability of target attainment
 - PD analysis - CrCl<50
@@ -62,16 +62,16 @@ Application Session
 -------------
 
 ### The application of pharmacometrics in individual therapy in China
-- speaker: Zheng Jiao (PCPC)
+- Speaker: Zheng Jiao (PCPC)
 - [Java PK for dashtop](http://pkpd.kmu.edu.tw/jpkd/)
 - Bayesian Dose Estimation
 - Drugs - Immunosuppressant, vanco, anti-epil
 - Non adhereence in chronic disease
-- individualized therapeutic range
-- many dashboard systems in China
+- Individualized therapeutic range
+- Many dashboard systems in China
 
 ### PD model fo Bayesian Prediction of myelosuppression rpofiles based on routine clinical data after gemcitabine and carboplatin treatment
-- speaker: Yoshitaka Yano (PAGJa)
+- Speaker: Yoshitaka Yano (PAGJa)
 - GEM, CDDP - PLT, RBC, WBC
 - NM7.3 FOCE
 - Bootstrap resampling / estimation
@@ -79,38 +79,38 @@ Application Session
 - VPC - 90% predictive interval
 
 ### Modeling and validating chronic pharmacological manupulation of circadian rhythms
-- speaker: Jaekyung Kim(PAGK)
+- Speaker: Jaekyung Kim(PAGK)
 - Transcriptional negative clock
 - Entrain.org
-- sensitive to dosing timing, light
+- Sensitive to dosing timing, light
 - 180 variables
 - Okazaki (2014), Symptom differs (2010)
 
 ### Application of PK/PD modeling and simulation in antiviral drug development
-- speaker: Kun Wang (PCPC)
-- varal dynamic model 
+- Speaker: Kun Wang (PCPC)
+- Varal dynamic model 
 - HIV replication cycle 
 - Target - Virus - Infected cell
 - T (CD4) I (Infected CD4) 
 - Lopinavir/Ritonavir (LPV/RTV) 
-- influenza - oseltamivir, oseltamivir carboxylate
+- Influenza - oseltamivir, oseltamivir carboxylate
 
 ### pharmacometrics in clinical practice: pop PK analysis of febuxostat in patients with severe renal impairment
-- speaker: Daiki Hira
+- Speaker: Daiki Hira
 - Febuxostat - renal execretion + biliary
 - Allopurinol -> Oxypurinol - renal execretion
 
 Regulation
 -------------
 
-### Japan
-- speaker: Yusuke Tanigawara (PAGJa)
+### The new Japanese guideline on population PK and PD analysis
+- Speaker: Yusuke Tanigawara (PAGJa)
 - Structural, Error, Covariate model
 - Model diagnosis - 각 스텝마다 해야 된다.
 - Model qualification(or evaluation / validation)이 중요하다. Final stage -> Bootstrap, External validation, VPC
 
-### Korea
-- speaker: Howard Lee (PAGK)
+### How to increase the number of population PK analysis reports submitted to MFDS in Korea
+- Speaker: Howard Lee (PAGK)
 - 의약품 개발 시 집단 약동학 활용
 - Dose optimization and ethnic bridging
 - Technical pharmacometrics trap
@@ -118,11 +118,11 @@ Regulation
 - Technical modelling
 
 ### EMA regulations on meling issues
-- speaker: Jaewoo Kim (PAGK)
+- Speaker: Jaewoo Kim (PAGK)
 - Guidance for industry
 
 ### Recent examples of impact of pharmacometrics in decision making
-- speaker: Jee Eun Lee (USA)
+- Speaker: Jee Eun Lee (USA)
 - Parieotide - somatostatin analogue (high affinity for sstr5) -> somatostatin analogue (Novartis)
 - 600ug BID failed to meet the pre-specified primary efficacy endpoint
 - Flat E-R for efficacy / steep E-R for hyperglycemia
@@ -132,7 +132,7 @@ Regulation
 - Chronic Plaque Psoriasis
 - Interindividual variability (PD, PK)
 - Secukinumab (Cosentyx) - target population
-- https://en.wikipedia.org/wiki/Secukinumab (Novartis)
+- Https://en.wikipedia.org/wiki/Secukinumab (Novartis)
 - Example of dose optimization
 - Body weight - significant covariate - conc decreases with body weight (stratified by 90kg)
 - Conc are higher in patients < 90kg
@@ -140,7 +140,7 @@ Regulation
 - IL-17(A) - Etanercept, infliximab, adalimumab(humira, shallow), ustekinumab = biologics
 - IgA, 4 Phase III, (2 of them were pivotal study)
 - PMC - post marketing commitment
-- the higher conc. => the higher incidence of infections (tolerable)
+- The higher conc. => the higher incidence of infections (tolerable)
 
 #### Edoxaban (흥미로운 약물)
 - NOAC - New Oral Anti-coagulants (4th)
@@ -149,6 +149,6 @@ Regulation
 - Normal - Mild - Moderate
 - Exposure - response relationships (Efficacy-Stroke, safety-bleeding)
 - Benefir-risk relationship is not novel. (Dabigatran: RE-LY trial)
-- exposure-response relationship PK matching.
+- Exposure-response relationship PK matching.
 - Identifying covariates prior to Phase 3
 
