--- a/_ConferencesSource/2016-10-18-ASRM2016.Rmd
+++ b/_ConferencesSource/2016-10-18-ASRM2016.Rmd
@@ -1,9 +1,11 @@
 ASRM 2016
 =========
 
-ASRM 2016은 미국생식의학회에서 주최하는 가장 큰 학회입니다.
+ASRM 2016은 미국생식의학회에서 주최하는 생식의학 관련 가장 큰 학회입니다.
 
 https://drive.google.com/open?id=0B7BS_yg2ja1EeUFxWkxFWVU3dEE
+
+![](https://lh3.googleusercontent.com/HE0f-tEFU59NQS-fFg5bt5BQXJ1mGOoSzMaTMfODF8QU1sro-2hkkfh72F8UqjV4YUGLnhHlrZ_ZT_TNkRIu1w=w1280-h608-rw)
 
 Plenary lectures
 ----------------
