--- a/_posts/2016-10-26-BE.md
+++ b/_posts/2016-10-26-BE.md
@@ -55,6 +55,13 @@ OPTIONS SYMBOLGEN = YES
 %BETEST(XDATA, LNAUCL);
 ```
 
+- `PROC MIXED`는 중간에 탈락한 사람들도 다 쓴다. `PROC GLM`은 처리를 못합니다. 
+- 비교하는 것은 Average BE, population BE(분산을 비교), individual BE(더 자세하게 봅니다)
+    - population BE - Prescribability(분산이 커지는지를 보는 것입니다)
+    - individual BE - Switchability(계속 먹고 있는 사람에게 바꿔서 줄 수 있겠는가를 봅니다)
+- 군당 최소 12명이상 하는 것이 관례화 되어 있다. 하지만 80% Power Sample size 
+- 90% CI for Ratio - 여기에는 100을 곱하면 안된다. Ratio에는 곱하기를 하지 않는다.
+
 분할 투여하는 경우
 -----------------
 
@@ -79,4 +86,9 @@ Conclusion
 Tmax
 ----
 
-Hoggis Lehman 방법을 써야 함.
+- Wilcoxon Signed-Rank Test (Non-parametric test)
+- Hodges & Lehmann Estimate 방법을 써야 함.
+
+$\mu_R$ 
+
+뮤알 - 80% ~ 120%
