--- a/_posts/2016-10-27-BE.md
+++ b/_posts/2016-10-27-BE.md
@@ -76,10 +76,13 @@ OPTIONS SYMBOLGEN = YES
 2. EQVTEST
 
 - 2차 효과를 빼고 돌려볼 수도 있습니다. 
+- "Consistency test를 하고 괜찮았으므로 합쳤습니다"
 
-Conclusion
+
+Discussion & Conclusion
 ----------
 
+- 요즘엔 WNL에서도 BE data를 처리해준다.
 - /TEST
 - 역로그 변환을 해야 한다.
 
@@ -89,6 +92,6 @@ Tmax
 - Wilcoxon Signed-Rank Test (Non-parametric test)
 - Hodges & Lehmann Estimate 방법을 써야 함.
 
-$\mu_R$ 
+$$$\mu_R$$$ 
 
 뮤알 - 80% ~ 120%
