--- a/_posts/2016-10-27-BE.md
+++ b/_posts/2016-10-27-BE.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title: BE, Bioequivalence, 생물학적 동등성 시험
+title: Bioequivalence, 생물학적 동등성 시험
 categories: 
 share: true
 comments: true
-tag: [Bioequivalence]
+tag: [Bioequivalence, KBE, BE]
 ---
 
 
@@ -29,8 +29,8 @@ PROC MIXED DATA=DATA;
 RUN;
 ```
 
-- PROC MIXED와 GLM의 가장 큰 차이 : SUBJ가 Random effect인가 아닌가..
-- Anova table을 구하려면 PROC GLM을 써야 함.
+- PROC MIXED와 `PROC GLM`의 가장 큰 차이 : SUBJ가 Random effect인가 아닌가..
+- Anova table을 구하려면 `PROC GLM`을 써야 함.
 - SUBJ(SEQ) - interindividual variability - 항상 유의하다. 오히려 유의하지 않으면 이상한것.
 - EMS(Estimated Mean) - Balanced 되어 있지 않아서 계수가 정수가 아님.
 - MSE를 error term으로 했을때를 보면 안됨. Sequence nesting되어 있기 때문. Sequence에 대한 F value 작아서 pooling해도 되지만, 규정상 하면 안됨
@@ -46,7 +46,7 @@ OPTIONS SYMBOLGEN = YES
 &VARNAME
 %MEND BETEST;
 ```
-- 위 코드에서 SYMBOLGEN은 로그 창에서 변수가 올바로 입력되었는지를 보는 것에 도움을 줍니다.
+- 위 코드에서 `SYMBOLGEN` 은 로그 창에서 변수가 올바로 입력되었는지를 보는 것에 도움을 줍니다.
 
 매크로를 부를때는 다음과 같이 합니다.
 
@@ -82,8 +82,9 @@ OPTIONS SYMBOLGEN = YES
 Discussion & Conclusion
 ----------
 
-- 요즘엔 WNL에서도 BE data를 처리해준다.
-- /TEST
+- 요즘엔 WNL에서도 BE data를 처리해줍니다만 average BE 외엔 신뢰도에 의문이 생깁니다.
+- 
+- SAS에서 `/TEST`를 쓰는 이유 
 - 역로그 변환을 해야 한다.
 
 Tmax
