--- a/_posts/2016-07-04-A-future-R.md
+++ b/_posts/2016-07-04-A-future-R.md
@@ -8,6 +8,9 @@ tag: [R, Data Science, ODBC]
 ---
 
 useR 2016에서 있었던 것중에 특징적인 것을 가져왔습니다.
+
+R markdown을 사용한 문서입니다.
+
 특히 말미에 ODBC가 언급된 것이 흥미롭습니다.
 
 ---
