--- a/_posts/2016-12-23-TNA.md
+++ b/_posts/2016-12-23-TNA.md
@@ -7,6 +7,8 @@ comments: true
 tag: [Therapeutics]
 ---
 
+![](http://i.imgur.com/Tgih90k.png)
+
 - TNA - Therapeutic Nucleic Acids
 - 대부분 극성을 띈다.
 - Aptamer, SELEX 
@@ -15,3 +17,27 @@ tag: [Therapeutics]
 - Locked NA, peptide NA, morpholino
 - FDA approved - Fomivirsen(1st), Mipomersen(2nd)
 - RNA + morpholino = RNA inhibition
+- Fomivirsen 
+    - CMV retinitis 
+    - CIBAVision 
+    - S/E) Bulls eye - reversible
+    - 요즘은 AIDS에서 CMV retinitis 잘 발생 안하여 상품성 저하됨.
+- Mipomersen
+    - inhibitor of apolipoprotein B-100
+- Gene delivery
+- Gendicine - 재조합된 adenovirus
+- 불확실한 long term effect - 15-year follow up - Major challenges
+- Layer-by-layer
+- HBV protein
+- RISC - shRNA - siRNA -> getting rid of mRNA
+- microRNA
+- miRNA-122 
+    - expressed in hepatocytes - HCV 
+    - proliferation of HCV
+- NOX-A12 (olaptesed pegol) 45-nucleotide-long RNA aptamer - CXCL12 / SDF-1 - a key regulatory chemokine
+- circular RNAs - stable
+- Conclusions
+    - Genome decoding -> facilitation of TNA development
+- Questions
+    - 농도 측정 어떻게?
+    - CRISPR
