--- a/_posts/2016-12-23-replyr.md
+++ b/_posts/2016-12-23-replyr.md
@@ -17,4 +17,8 @@ head(Theoph) %>% replyr::letp(alias = list(c1 = "Wt", c2 = "Dose", c3 = "Total.D
     expr = {. %>% mutate(c3 = c1 * c2)})
 ```
 
+이런식으로 alias를 사용하여 좀 더 직관적으로 pipes를 사용할 수 있게 해 줍니다. 
+
+
 <https://www.r-bloggers.com/a-simple-example-of-using-replyrgapply/>
+
