--- a/_posts/news/2012-10-28-MSDEvent.md
+++ b/_posts/news/2012-10-28-MSDEvent.md
@@ -7,7 +7,7 @@ categories: News
 tags: [News]
 ---
 
-[](http://www.docdocdoc.co.kr/news/articleView.html?idxno=122693)
+Source: [청년의사](http://www.docdocdoc.co.kr/news/articleView.html?idxno=122693)
 
 ![]({{ "/assets/12msdevent.png" | absolute_url }})
 
