--- a/_posts/news/2012-10-01-MSD.md
+++ b/_posts/news/2012-10-01-MSD.md
@@ -9,4 +9,4 @@ tags: [News]
 
 Source: [청년의사](http://www.docdocdoc.co.kr/news/articleView.html?idxno=121733)
  
-![]({{ "/assets/12msd.png" | absolute_url }})
+![]({{ "/assets/12msd.png" }})
