--- a/_posts/news/2007-04-10-docbook.md
+++ b/_posts/news/2007-04-10-docbook.md
@@ -9,7 +9,27 @@ tags: [News]
 
 청년의사 책읽는 의사 수상작
 
+현대 사회가 인류에게 가져다 준 커다란 위해(危害) 중 하나는 인간사회의 존재 의의에 대한 깊은 성찰을 방해하는 ‘바쁨’에 있지 않을까! 현대인은 높은 효율성과 날카로운 객관성을 통해 도시문명을 경이롭게 거대화시키고 세분화시켜 현재의 지식사회를 이룩했다. 그러나 역설적으로 역사의 흐름이나 문명의 방향성에 대해서는 놀랄 만큼 무지하다. 다시 말해 오늘날 도시인들은 하루하루의 삶을 정신없이 살아가고 있으나, 그 하루의 모습을 형성하게 된 원인과 형성의 구체적인 과정을 파악하기 힘든 상황에 놓여있다 할 수 있다. 과연 이토록 급격히 변화하고 다양화되는 세계 속에서 각각의 인간이 인류 전체의 발전 양상을 올바르게 파악하는 일이 왜 중요할까? 단순히 바쁘다는 핑계로 현재 자신이 속한 사회의 모습만을 편협하게 이해하는 것으로 만족하기엔 경제 10위권 대국인 대한민국의 시민으로서 위상이 무색한 것은 아닐까? 세계 속의 시민으로서 우리가 취해야 할 올바른 역사관은 어떠해야 하는가?
+
+Dr.Jared Diamond의 <총·균·쇠>에서 우리는 커다란 힌트를 얻을 수 있다. 이 책의 부제는 ‘무기·병균·금속은 인류의 운명을 어떻게 바꿨는가?’ 이다. 실제로 마지막 페이지까지 이 책을 읽었을 때 작가가 이 질문에 대답하기 위해 언어학, 생리학, 분자생물학, 지리학, 생태학 등 다양한 학문을 매우 통합적으로 사용했음을 알 수 있었다. 우리가 익히 알고 있듯이 유라시아(Eurasia)는 지난 13,000년 정도의 긴 시간 속에서 농업과 기술을 발전시켜 세계 속에서 그 위상을 떨치고 있다. 많은 역사가들이 유라시아의 역사를 세계사의 기술에 필수적인 시발점으로 생각하고 있으며, 실제로 현재까지 인류가 가장 많은 연구를 해온 지역이기도 하다. 과연 이러한 현상의 이유가 그들이 갖고 있는 우월성 때문일까?
+
+> 어떤 민족들은 총기, 병원균, 쇠를 비롯한 여러 요소들을 발전시켜 남보다 먼저 정치적, 경제적 힘을 얻었다. 반면에 어떤 민족들은 끝까지 그와 같은 힘의 요소들을 발전시키지 못했던 것이다. (중략) 대부분의 사람들은 아마 인종차별적인 생물학적 설명이 정확할지도 모른다고 생각할 것이다. 그것이야말로 내가 이 책을 쓰는 가장 중요한 이유다. - ‘프롤로그’ 中
+
+작가는 이러한 유라시아 헤게모니(hegemony, 연맹제국에 대한 지배권, 맹주권, 패권)가 가능했던 이유가 그들이 가졌던 문화적, 지적, 도덕적 우월성 때문은 결코 아니라고 단언한다. 여러 사회 간의 힘과 기술의 차이가 문화적, 인종적 우열에 근거하지 않으며, 그보다는 정귀환루프(positive feedback loop)에 의해 증폭된 환경적 원인에 있다고 한다. 작가에 따르면 문명은 인간의 의지나 지능에 근거해 발생하지 않고, 특정 선조건; 즉, 기후-지리적 특성에 근거한 정주형 농업의 발전, 경작에 의한 인구 증가와 교역의 증대, 주변 나라와의 경쟁을 통한 오류 교정 등에 의해 발생했다. 이러한 발전이 연이어 일어난 결과 유라시아는 총, 균, 쇠를 통한 강력한 지배력을 획득하게 된 것이다.
+
+우리는 자주 서구 유럽 문명과 제 3세계의 문명을 비교하며 쉽게 그 우열을 판가름하고자 하는 생각에 빠지게 된다. 하지만 <총?균?쇠>등을 통해 나타난 인류사회학, 현대생물학의 연구는 그러한 생각이 얼마나 위험한지 말해주고 있다. 인류를 분열로 이르게 했던 많은 갈등과 그로 인한 분쟁, 분쟁은 우리에게 새로운 역사관, 인류관을 다급히 요구하고 있다.
+
+18세기 프랑스 혁명에서 ‘자유-평등-박애 liberty, equality, and fraternity’의 깃발이 펄럭였다. 이어 ‘자유’가 19세기에 좋게 표현해 국적의 출현을, 그리고 나쁘게는 노동 계급의 착취를 불러왔다. 또한 ‘평등’은 20세기에는 사회민주주의라는 긍정적 이념을 제시했고, 부정적으로는 공산주의로 귀착되었다. 이제 21세기에는 ‘박애(Fraternity/philanthropy)’가 앞서 제시한 두 유토피아적 가치를 하나로 통합할 수 있을 것이다.주)
+
+이러한 박애의 가치는 사회와 문화의 우열을 가리는 풍토 속에서는 절대로 우러나올 수 없으며, 인류 문명의 본질적 평등을 자각할 때에만 가능하다. 이러한 패러다임의 전환이 바로 그 우월함의 총아였던 서구 세계에서 지식인들을 중심으로 퍼져나가고 있음은 무척 고무적인 변화라 할 수 있다.
+
+> 나는 인간 사회에 대한 역사적 연구는 (중략) 어떤 일들이 현대 세계를 형성했고 또 어떤 일들이 우리의 미래를 형성하게 될 것인지를 가르쳐줌으로써 오늘날의 우리 사회에도 보탬이 될 것임을 낙관하고 있다. - ‘에필로그’ 中
+
+작가의 인류학에 대한 이러한 확신은 글 서두의 난해한 질문들에 대한 명쾌한 대답이리라 생각한다. <총·균·쇠>. 다소 전투적인 제목을 감안하고 읽은 글이었지만, 자극적인 그 제목 이상으로 나의 내면, 나아가 총체적 세계관을 바꾸고, 인류학에 대한 고정관념을 깨뜨린 역작이었다. ■
+
+주) 「21세기 사전」, Jacques Attali, 중앙 M&B, 1999
+
 Source: [청년의사](http://www.docdocdoc.co.kr/news/articleView.html?idxno=46725)
- 
+
 ![]({{ "/assets/gungerms.png" }})
 
