--- a/_posts/2017-01-24-books.md
+++ b/_posts/2017-01-24-books.md
@@ -17,11 +17,17 @@ tag: [R, Books]
 
 <https://bookdown.org/rdpeng/RProgDA/>
 
+### Advanced R
+
+![](https://images-na.ssl-images-amazon.com/images/I/41Qkod8KOBL._SX329_BO1,204,203,200_.jpg)
+
+<http://adv-r.had.co.nz/>
+
 ### R Packages
 
-<http://r-pkgs.had.co.nz/>
-
 ![](http://r-pkgs.had.co.nz/cover.png)
+
+<http://r-pkgs.had.co.nz/>
 
 ### Github
 
