--- a/_posts/2017-02-24-Paper.md
+++ b/_posts/2017-02-24-Paper.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Paper published.
+title: I got Erdos number 4. 
 categories: 
 share: true
 comments: true
@@ -9,6 +9,18 @@ tag: [ ]
 
 This is a paper based on the lab work I did in NIH back in 2012 and I am so happy to see it published although it's little complicated to understand.
 
-"The effects of interleukin-2 on immune response regulation"
+["The effects of interleukin-2 on immune response regulation"](https://academic.oup.com/imammb/article/3038032/The-effects-of-interleukin-2-on-immune-response?searchresult=1)
+
+Most importantly, now I got Erdos number and the more surprisingly it's 4.
+
+Sungpil Han coauthored with TomÃ¡Å¡ Gedeon
+TomÃ¡Å¡ Gedeon  coauthored with     Brendan Mumey   MR2130556
+Brendan Mumey   coauthored with     Maria Margaret Klawe    MR1213232
+Maria Margaret Klawe    coauthored with     Paul ErdÅs1   MR0593526
+
+<http://www.ams.org/mathscinet/collaborationDistance.html>
 
 ![Published]({{ "/assets/Math.png" }})
+
+
+
