--- a/_posts/2017-02-24-Paper.md
+++ b/_posts/2017-02-24-Paper.md
@@ -13,10 +13,10 @@ This is a paper based on the lab work I did in NIH back in 2012 and I am so happ
 
 Most importantly, now I got Erdos number and the more surprisingly it's 4.
 
-Sungpil Han coauthored with TomÃ¡Å¡ Gedeon
-TomÃ¡Å¡ Gedeon  coauthored with     Brendan Mumey   MR2130556
-Brendan Mumey   coauthored with     Maria Margaret Klawe    MR1213232
-Maria Margaret Klawe    coauthored with     Paul ErdÅs1   MR0593526
+- Sungpil Han coauthored with TomÃ¡Å¡ Gedeon (Not listed yet)
+- TomÃ¡Å¡ Gedeon  coauthored with     Brendan Mumey   MR2130556
+- Brendan Mumey   coauthored with     Maria Margaret Klawe    MR1213232
+- Maria Margaret Klawe    coauthored with     Paul ErdÅs1   MR0593526
 
 <http://www.ams.org/mathscinet/collaborationDistance.html>
 
