--- a/_posts/2017-03-06-tidy-data.md
+++ b/_posts/2017-03-06-tidy-data.md
@@ -10,4 +10,9 @@ output:
     keep_md: yes
 ---
 
+This paper written by Hadley is so well-written that I should save it here for the future reference.
+
+<https://www.jstatsoft.org/article/view/v059i10>
+
 ![](/assets/tidydata.png)
+
