--- a/_posts/2017-03-07-R33.md
+++ b/_posts/2017-03-07-R33.md
@@ -12,6 +12,6 @@ output:
 
 R 3.3.3 Another Canoe is released. MacOS binary isn't yet released though.
 
-Also Rstudio Daily Build is installed. It feels quite mint!
+Also Rstudio Daily Build is installed. 
 
-![](/assets/R33.png)
+![](/assets/r33.png)
