--- a/_posts/2017-03-07-ICH-E18.md
+++ b/_posts/2017-03-07-ICH-E18.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title: 
-categories: 
+title: ICH E18 - Genomic Sampling and Data
+categories: presentation
 share: true
 comments: true
-tag: [ ]
+tag: [Clinical Trial]
 output:
   html_document:
     keep_md: yes
