--- a/_posts/2017-03-08-ICH.md
+++ b/_posts/2017-03-08-ICH.md
@@ -9,9 +9,10 @@ output:
   html_document:
     keep_md: yes
 ---
-Á¦°¡ ¿À´Ã Àü¹®°¡È¸ÀÇ¿¡¼­ ¹ßÇ¥ÇÑ ICH E18 ¹ßÇ¥ ÀÚ·á·Î Genomic sampling, genomic data¿¡ ´ëÇÑ ³»¿ëÀÌ ´ã°ÜÀÖ½À´Ï´Ù.
+ì œê°€ ì˜¤ëŠ˜ ì „ë¬¸ê°€íšŒì˜ì—ì„œ ë°œí‘œí•œ ICH E18 ë°œí‘œ ìë£Œë¡œ Genomic sampling, genomic dataì— ëŒ€í•œ ë‚´ìš©ì´ ë‹´ê²¨ìˆìŠµë‹ˆë‹¤.
 
 <http://www.ich.org/fileadmin/Public_Web_Site/ICH_Products/Guidelines/Efficacy/E18_Step2.pdf>
 
 ![](20170307-ICH-E18-shan.png)
+
 
