--- a/_posts/2017-03-08-ICH.md
+++ b/_posts/2017-03-08-ICH.md
@@ -13,6 +13,6 @@ output:
 
 <http://www.ich.org/fileadmin/Public_Web_Site/ICH_Products/Guidelines/Efficacy/E18_Step2.pdf>
 
-![](20170307-ICH-E18-shan.png)
+![Presentation](/assets/20170307-ICH-E18-shan.png)
 
 
