--- a/_ConferencesSource/References.bib
+++ b/_ConferencesSource/References.bib
@@ -1,6 +1,6 @@
 @Article{Lim_2014,
   doi = {10.1002/jcph.427},
-  url = {http://dx.doi.org/10.1002/jcph.427},
+  url = {https://doi.org/10.1002%2Fjcph.427},
   year = {2014},
   month = {dec},
   publisher = {Wiley-Blackwell},
@@ -14,10 +14,10 @@
 
 @Article{Lee_2015,
   doi = {10.1007/s00431-015-2581-x},
-  url = {http://dx.doi.org/10.1007/s00431-015-2581-x},
+  url = {https://doi.org/10.1007%2Fs00431-015-2581-x},
   year = {2015},
   month = {jun},
-  publisher = {Springer Science $\mathplus$ Business Media},
+  publisher = {Springer Nature},
   volume = {174},
   number = {12},
   pages = {1671--1678},
