--- a/_drafts/rxode.Rmd
+++ b/_drafts/rxode.Rmd
@@ -15,13 +15,15 @@ This slide is what I presented in the Journal Club of AMC CPT.
 
 RxODE is an easy ODE solver specialized in pharmacometric applications.
 
-
+```{r setup, include = FALSE}
+knitr::opts_chunk$set(error = TRUE, warning = FALSE, message = FALSE)
+knitr::opts_chunk$set(fig.path='{{ site.url }}/images/rxode-')
+```
 
 
 ## Set up 
 
-
-```r
+```{r}
 # Load some data science tools
 library(knitr)
 library(dplyr)
@@ -54,8 +56,7 @@ inits <- c(0, 0, 0, 1)
 
 ## Simulate a single dose
 
-
-```r
+```{r}
 # Initialize event table
 ev <- eventTable()
 
@@ -72,24 +73,18 @@ x <- mod1$run(params, ev, inits)
 matplot(x[,"C2"], type = "l", xlab = "time (hrs)", ylab = "Central Conc.")
 ```
 
-![plot of chunk unnamed-chunk-2](figure/unnamed-chunk-2-1.png)
-
 ### More comprehensive plot
 
-
-```r
+```{r}
 ggx <- as.tibble(x) %>% gather("compartment", "value", depot:C3)
 ggplot(ggx, aes(x = time, y = value, group = compartment, colour = compartment)) +
     geom_line() +
     facet_wrap(~compartment, scale = "free_y")
 ```
 
-![plot of chunk unnamed-chunk-3](figure/unnamed-chunk-3-1.png)
-
 ## Simulate 5 days BID followed by 5 days QD
 
-
-```r
+```{r}
 ev <- eventTable()
 
 # Specify 5 days BID dosing
@@ -104,24 +99,18 @@ x <- mod1$run(params, ev, inits)
 matplot(x[,"C2"], type = "l", xlab = "time (hrs)", ylab = "Central Conc.")
 ```
 
-![plot of chunk unnamed-chunk-4](figure/unnamed-chunk-4-1.png)
-
 ### More comprehensive plot
 
-
-```r
+```{r}
 ggx <- as.tibble(x) %>% gather("compartment", "value", depot:C3)
 ggplot(ggx, aes(x = time, y = value, group = compartment, colour = compartment)) +
     geom_line() +
     facet_wrap(~compartment, scale = "free_y")
 ```
 
-![plot of chunk unnamed-chunk-5](figure/unnamed-chunk-5-1.png)
-
 ## Simulate with variability
 
-
-```r
+```{r}
 # Perform simulation 100 times
 nsub <- 100
 
@@ -157,14 +146,12 @@ matplot(res, type = "l",  ylab = "Effect", xlab = "Time (hrs)")
 res.q.t <- apply(res, 1, quantile, prob = c(.05, .5, .95))
 matplot(t(res.q.t), type = "l", lty = c(2,1,2), col = c(2,1,2), ylab = "Effect", xlab = "Time (hrs)")
 legend("topright", c("median","5 and 95%"), lty = c(1,2), col = c("black","red"), cex = .8)
-```
 
-![plot of chunk unnamed-chunk-6](figure/unnamed-chunk-6-1.png)
+```
 
 ### More comprehensive plot
 
-
-```r
+```{r}
 resRaw <- list()
 resRaw <- lapply(1:nsub, function(x) mod1$run(params.all[x, ], ev, inits = inits) %>% 
                   as.tibble %>% 
@@ -176,12 +163,9 @@ ggplot(ggres, aes(x = time, y = value, group = SUBJID, colour = SUBJID)) +
     facet_wrap(~compartment, scale = "free_y")
 ```
 
-![plot of chunk unnamed-chunk-7](figure/unnamed-chunk-7-1.png)
-
 ## Simulate Adaptive dosing for a single subject: Decision Rule #1 
 
-
-```r
+```{r}
 #Decision Rule:
 #	If trough effect <.4, cut dose in half
 #	If trough effect in [0.4, 0.6], do not change dose
@@ -237,14 +221,12 @@ plot(res[,"time.total"]/24, res[,"eff"], type = "l", ylim = c(0,1), xlab = "Time
 rect(-200,0.4,1500,0.6,col = rgb(0.5,0.5,0.5,1/4))
 points(res[,"time.total"]/24,res[,"doses"], type = "s", xlab = "Time (days)", ylab = "Dose", col = "red", lty = 2)
 legend("topright", c("Effect","Dose Multiplier"), lty = c(1,2), col = c("black","red"))
-```
 
-![plot of chunk unnamed-chunk-8](figure/unnamed-chunk-8-1.png)
+```
 
 ## Simulate Adaptive dosing for a single subject: Decision Rule #2
 
-
-```r
+```{r}
 # Decision Rule:
 # If peak effect <0.4, cut dose in half
 # If effect at tmax < 0.4, cut the dose in half
@@ -297,12 +279,9 @@ points(res[,"time.total"]/24,res[,"doses"], type = "s", xlab = "Time (days)", yl
 legend("topright",c("Effect","Dose Multiplier"), lty = c(1,2), col = c("black","red"))
 ```
 
-![plot of chunk unnamed-chunk-9](figure/unnamed-chunk-9-1.png)
-
 ## Simulating adaptive dosing with variability 
 
-
-```r
+```{r}
 # Perform simulation 100 times
 nsub <- 50;  
 
@@ -379,6 +358,4 @@ rect(-200, 0.4, 1500, 0.6, col = rgb(0.5, 0.5, 0.5, 1/4))
 matplot(100*t(dose.list)/nsub, type = "l",  lty = 1,  ylab = "% subjects on each dose", xlab = "Time (Days)", lwd = 2, col = c(1:4, 6))
 legend("topright", c("1", "0.5", "0.25", "0.125", "0.0625"), lty=1, col=c(1:4, 6), horiz = TRUE, cex = 0.9, bty = 'n')
 ```
-
-![plot of chunk unnamed-chunk-10](figure/unnamed-chunk-10-1.png)
 
